a1/brendan_gordon/TEST_PROGRAMS/invalidtype/justin_domingue/invalidtype-3.min
# Invalid type 3

var s: string;
var n: int;

n = 123;
s = "abc";

s = n + s;  # error

